Full Imports and Code Format Optimization